@@ -125,5 +125,12 @@ class Actor:
                             len(self.hit),
                             str(proj_index_init_obs)[-4:]
                         ))
+                    Logger.write(f"Actor_{self.id}/R", self.episodic_reward[-1], self.num_episode)
+                    Logger.write(f"Actor_{self.id}/AvgR", np.mean(self.episodic_reward), self.num_episode)
+                    Logger.write(f"Actor_{self.id}/MaxR", self.max_episodic_reward, self.num_episode)
+                    Logger.write(f"Actor_{self.id}/FPS", self.fps[-1], self.num_episode)
+                    Logger.write(f"Actor_{self.id}/Hit%", hit_rate, self.num_episode)
+                    Logger.write(f"Actor_{self.id}/LostAt", f"{last_step_before_loss}/{len(self.hit)}", self.num_episode, type="text")
+                    Logger.write(f"Actor_{self.id}/O_1", str(proj_index_init_obs)[-4:], self.num_episode, type="text")
                     break
             self.num_episode += 1
